--- a/index.html
+++ b/index.html
@@ -1,1 +1,66 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Google Sheet Search System</title>
+<style>
+    body { font-family: Arial; padding: 20px; }
+    input { width: 300px; padding: 8px; font-size: 16px; }
+    table { border-collapse: collapse; width: 100%; margin-top: 20px; }
+    table, th, td { border: 1px solid #999; }
+    th, td { padding: 8px; text-align: left; }
+</style>
+</head>
+<body>
 
+<h2>Search From Google Sheet</h2>
+<input type="text" id="searchBox" placeholder="Search..." onkeyup="searchData()">
+<br><br>
+
+<table id="dataTable"></table>
+
+<script>
+const csvUrl =
+"https://docs.google.com/spreadsheets/d/e/2PACX-1vT9lQKbhfrFZFIXpD0Byxq6L5xI4aARKHsYwnzH40aJLpRx80cPYk_3DxGpvcHWKfzGUJQduOP46hO6/pub?gid=0&single=true&output=csv";
+
+let data = [];
+
+// CSV Data Load
+fetch(csvUrl)
+  .then(response => response.text())
+  .then(csv => {
+    const rows = csv.split("\n").map(r => r.split(","));
+    data = rows;
+    displayTable(rows);
+  });
+
+// Show Table
+function displayTable(rows) {
+  let table = document.getElementById("dataTable");
+  table.innerHTML = "";
+
+  rows.forEach((row, index) => {
+    let tr = document.createElement("tr");
+
+    row.forEach(col => {
+      let td = document.createElement(index === 0 ? "th" : "td");
+      td.innerText = col.trim();
+      tr.appendChild(td);
+    });
+
+    table.appendChild(tr);
+  });
+}
+
+// Live Search Function
+function searchData() {
+  let value = document.getElementById("searchBox").value.toLowerCase();
+  let filtered = data.filter((row, i) =>
+    i === 0 || row.join(" ").toLowerCase().includes(value)
+  );
+  displayTable(filtered);
+}
+</script>
+
+</body>
+</html>
